--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,9 @@
   height: 100%;
   background: linear-gradient(180deg, #343A40 55.73%, #212529 100%) no-repeat;
 }
+img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 0.25rem;
+  display: block;
+}
