--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  width: 100%;
-  height: 100%;
   background: linear-gradient(180deg, #343A40 55.73%, #212529 100%) no-repeat;
+}
+#root {
+  position: relative;
+  width: 100%;
+  height: 98vh;
 }
 img {
   max-width: 100%;
