--- a/src/index.scss
+++ b/src/index.scss
@@ -3,24 +3,28 @@
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: ' Nunito ',Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
 
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  background: linear-gradient(180deg, #343A40 55.73%, #212529 100%) no-repeat;
+  background-color: #0a5efb;
+  background-image: url('./assets/textura.png');
+  height: 100vh;
+  max-width: 100vw;
 }
-#root {
+body {
   position: relative;
-  width: 100%;
-  height: 98vh;
+  max-width: 100%;
+  height: 100%;
 }
 img {
   max-width: 100%;
@@ -28,3 +32,4 @@ img {
   border-radius: 0.25rem;
   display: block;
 }
+
