--- a/src/presentation/components/button/primary/btn-primary.scss
+++ b/src/presentation/components/button/primary/btn-primary.scss
@@ -10,7 +10,7 @@ $action-color: #001b4d;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $yellow;
+  background-color: $yellow !important;
   border-top: 2px solid transparent;
   border-bottom: 2px solid transparent;
   border-top-color: $light-yellow;
@@ -18,7 +18,7 @@ $action-color: #001b4d;
   color: $action-color;
   text-transform: uppercase;
   box-shadow:  0 0 2px #333, 0 0 0 4px #111;
-  font-weight: 600;
+  font-weight: 900;
   padding: 0.5rem 1.5rem;
   border-radius: 0.5rem;
   gap: 0.5rem;
