--- a/src/presentation/components/button/secondary/btn-secondary.scss
+++ b/src/presentation/components/button/secondary/btn-secondary.scss
@@ -14,7 +14,7 @@ $action-color: #001b4d;
   box-shadow:  0 0 2px #333, 0 0 0 4px #111;
   border-top: 2px solid transparent;
   border-bottom: 2px solid transparent;
-  background-color: $light-blue;
+  background-color: $light-blue !important;
   border-top-color: #66cfff;
   border-bottom-color: #248aed;
   color: $action-color;
