--- a/src/presentation/components/canvas/canvas.scss
+++ b/src/presentation/components/canvas/canvas.scss
@@ -1,5 +1,14 @@
+.canvas-container {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
+}
 .drawing-canvas {
   outline: 2px solid #5d8899; 
   border-radius: 8px;
   background-color: #fff;
+  width: 100%;
+  height: 100%;
 }
