--- a/src/presentation/components/chat/chat.scss
+++ b/src/presentation/components/chat/chat.scss
@@ -15,6 +15,7 @@ $action-color: #001b4d;
   background-color: #fff;
   outline: 2px solid #5d8899;
   color: $action-color;
+  font-weight: 600;
     .btn-primary {
       display: flex;
       align-items: center;
