create chat integration with different nicknames

--- a/src/presentation/components/chat/answer/answer-chat.scss
+++ b/src/presentation/components/chat/answer/answer-chat.scss
@@ -21,15 +21,15 @@
     }
 }
 .answer span {
-  font-size: 1.125rem;
+  font-size: 0.875rem;
 }
 
-.decor {
+.decor-answer {
   background-color: #0b2990;
   color: #fff;
   font-weight: 900;
   text-transform: uppercase;
-  top: -1.875rem;
+  top: -2rem;
   right: 1rem;
   padding: 0.5rem;
   border-radius: 0.5rem;
