--- a/src/presentation/components/chat/talk/talk-chat.scss
+++ b/src/presentation/components/chat/talk/talk-chat.scss
@@ -2,6 +2,9 @@
   width: 50%;
 }
 .talk-chat-container {
+  max-width: 70ch;
+  word-wrap: break-word;
+
     &::-webkit-scrollbar {
       width: 0.4rem;
       height: 100%;
@@ -20,5 +23,15 @@
     }
 }
 .chat-message {
-  font-size: 1.125rem;
+  font-size: 0.875rem;
+}
+.decor-talk {
+  background-color: #0b2990;
+  color: #fff;
+  font-weight: 900;
+  text-transform: uppercase;
+  top: -2.5rem;
+  right: 1rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
 }
