--- a/src/presentation/components/lists/player-list/player-list.scss
+++ b/src/presentation/components/lists/player-list/player-list.scss
@@ -1,4 +1,3 @@
-
 .player-list-container {
   width: 35vw;
   height: 79.5vh;
@@ -6,21 +5,46 @@
   border-radius: 10px;
   background-color: #fff;
 }
+
 .player-list {
-    &::-webkit-scrollbar {
-      width: 0.7rem;
-      height: 100%;
-      background-color: transparent;
+  &::-webkit-scrollbar {
+    width: 0.7rem;
+    height: 100%;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-button {
+    height: 0.5rem;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    width: 0.5rem;
+    border-radius: 3px;
+    background-color: #386d84;
+  }
+}
+
+.player-list {
+  li {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    border-bottom: 1px solid #ccc;
+    cursor: pointer;
+
+    &:hover {
+      img {
+        transform: scale(1.1);
+      }
     }
-    &::-webkit-scrollbar-track {
-      background-color: transparent;
-    }
-    &::-webkit-scrollbar-button {
-      height: 0.5rem;
-    }
-    &::-webkit-scrollbar-thumb {
-      width: 0.5rem;
-      border-radius: 3px;
-      background-color: #386d84;
-    }
+  }
+
+  .player-info {
+    color: #000;
+    font-size: 20px;
+  }
 }
