--- a/src/presentation/components/lists/player-list/player-list.scss
+++ b/src/presentation/components/lists/player-list/player-list.scss
@@ -4,31 +4,31 @@
   margin-right: 1rem;
   border-radius: 10px;
   background-color: #fff;
+  overflow-y: scroll;
+    &::-webkit-scrollbar {
+      width: 0.7rem;
+      height: 100%;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-button {
+      height: 0.5rem;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      width: 0.5rem;
+      border-radius: 3px;
+      background-color: #386d84;
+    }
 }
 
 .player-list {
-  &::-webkit-scrollbar {
-    width: 0.7rem;
-    height: 100%;
-    background-color: transparent;
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
-
-  &::-webkit-scrollbar-button {
-    height: 0.5rem;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    width: 0.5rem;
-    border-radius: 3px;
-    background-color: #386d84;
-  }
-}
-
-.player-list {
+  overflow-y: scroll;
+  height: 100%;
   li {
     display: flex;
     align-items: center;
@@ -36,15 +36,34 @@
     border-bottom: 1px solid #ccc;
     cursor: pointer;
 
-    &:hover {
-      img {
-        transform: scale(1.1);
+      &:hover {
+        img {
+          transform: scale(1.1);
+        }
       }
-    }
   }
 
   .player-info {
     color: #000;
     font-size: 20px;
   }
+    &::-webkit-scrollbar {
+      width: 0.7rem;
+      height: 100%;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-button {
+      height: 0.5rem;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      width: 0.5rem;
+      border-radius: 3px;
+      background-color: #386d84;
+    }
 }
