--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,7 @@ body {
   position: relative;
   max-width: 100%;
   height: 100%;
+  font-family: 'Nunito', Helvetica, sans-serif;
 }
 img {
   max-width: 100%;
