--- a/src/presentation/components/canvas/canvas.scss
+++ b/src/presentation/components/canvas/canvas.scss
@@ -1,6 +1,6 @@
 .canvas-container {
   width: 100%;
-  height: 50vh;
+  height: 70%;
   display: flex;
   flex-direction: column;
   margin-bottom: 1.5rem;
