--- a/src/presentation/components/chat/chat.scss
+++ b/src/presentation/components/chat/chat.scss
@@ -16,6 +16,7 @@ $action-color: #001b4d;
   outline: 2px solid #5d8899;
   color: $action-color;
   font-weight: 600;
+  width: 994px;
     .btn-primary {
       display: flex;
       align-items: center;
