--- a/src/presentation/components/modal/share-modal/share-modal.scss
+++ b/src/presentation/components/modal/share-modal/share-modal.scss
@@ -16,7 +16,6 @@
       background: #fff;
       display: flex;
       flex-direction: column;
-      gap: 2rem;
       border-radius: 8px;
       border: 2px solid #111;
       transition: all 0.3s ease-in-out;
@@ -47,7 +46,7 @@
         position: absolute;
         top: -20px;
         right: -4px;
-        background-color: #f88700;
+        background-color: #EF5B5B;
         border-radius: 50%;
       }
   }
@@ -57,22 +56,30 @@
     justify-content: center;
     align-self: center;
     justify-self: center;
-    height: 50%;
     width: 100%;
     gap: 0.125rem;
+    margin-bottom: 2rem;
     .share-modal-link{
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 2rem;
       border-radius: 0.5rem;
       border: 2px solid #111;
       background-color: white;
       font-weight: bold;
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
     }
     .share-modal-copy-button {
+      position: absolute;
+      right: 0;
       padding: 0.6rem 0.5rem;
       cursor: pointer;
       border-radius: 0.5rem;
-        &:hover {
-          color: #fff;
+        svg {
+          &:hover {
+            color: #ccc;
+          }
         }
     }
   }
@@ -83,5 +90,43 @@
     flex-direction: row;
     height: 20%;
     width: 100%;
+  }
+  .share-link-copied{
+    position: absolute;
+    top: 35px;
+    right: -20px;
+    display:flex;
+    width: 200%;
+    align-items: center;
+    justify-content: center;
+    background-color: #ccc;
+    color: #000;
+    font-size: 10px;
+    font-weight: bold;
+    animation: fade 0.5s ease-in-out;
+    border-radius: 2px;
+    border: 1px solid #111;
+    font-weight: 900;
+    z-index: 4;
+    @keyframes fade {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+    &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    transform: rotate(45deg);
+    background-color: #ccc;
+    top: -4px;
+    border-top: 1px solid #111;
+    border-left: 1px solid #111;
+  }
   }
 }
