--- a/src/presentation/components/button/primary/btn-primary.scss
+++ b/src/presentation/components/button/primary/btn-primary.scss
@@ -23,7 +23,7 @@ $action-color: #001b4d;
   border-radius: 0.5rem;
   gap: 0.5rem;
     &:hover {
-      background-color: #ffcb00;
+      background-color: $light-yellow !important;
       border-top-color: #ffef7c;
       border-bottom-color: $orange;
       color: $action-color;
