--- a/src/presentation/components/chat/answer/answer-chat.scss
+++ b/src/presentation/components/chat/answer/answer-chat.scss
@@ -36,3 +36,8 @@
   padding: 0.5rem;
   border-radius: 0.5rem;
 }
+.answer-input[disabled] {
+  background-color: #E5E5E5;
+  color: #000;
+  cursor: not-allowed;
+}
