--- a/src/presentation/components/modal/action-modal/action-modal.scss
+++ b/src/presentation/components/modal/action-modal/action-modal.scss
@@ -1,13 +1,21 @@
 
 .action-modal-container {
   position: absolute;
-  width: 33%;
-  height: 70%;
+  width: 25rem;
+  height: 20rem;
   background-color: #fff;
   display: flex;
   flex-direction: column;
   padding: 1rem;
   border-radius: 8px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 15px;
+  transition: all 0.3s ease-in;
+  animation: appear-animation .3s ease-in forwards;
+  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
+  border: 2px solid #000;
   .action-modal-header {
     display: flex;
     width: 100%;
@@ -19,6 +27,7 @@
         font-weight: bold;
         width: 100%;
         text-align: center;
+        color: #000;
       }
   }
   .action-modal-description-container {
@@ -39,8 +48,19 @@
     justify-content: center;
     width: 100%;
     margin-top: 1.5rem;
+    gap: 1rem;
   }
   .action-modal-header-close-button-container{
     cursor: pointer;
+  }
+}
+@keyframes appear-animation {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
   }
 }
